# stablesats-rs

./: .env  .env.ci  .env.example  .envrc  .envrc.example  .gitignore  CHANGELOG.md  Cargo.toml  DEV.md  Dockerfile  Dockerfile.release  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  flake.nix  notes  rust-toolchain.toml  stablesats.yml  typos.toml
bitfinex-client/: Cargo.toml
bitfinex-client/src/client/: bitfinex_response.rs  error.rs  mod.rs  primitives.rs
bitfinex-client/tests/: bitfinex_client_tests.rs  bitfinex_trading_tests.rs  client.rs
bitfinex-price/: Cargo.toml
bitfinex-price/src/: config.rs  convert.rs  error.rs  lib.rs
bitfinex-price/tests/: price_feed.rs
bria-client/: Cargo.toml  build.rs
bria-client/src/: client.rs  error.rs  lib.rs
bria-client/src/client/: config.rs  (+2 more)
bria-client/tests/: bria_client.rs
broker/: .env  Cargo.toml
broker/migrations/: 20220819123516_create-initial-tables.up.sql  20220819123516_create-table-user-trades.down.sql  20220819123516_create-table-user-trades.up.sql
broker/src/: config.rs  lib.rs  repository_error.rs
broker/tests/: user_trade.rs  user_trade_balances.rs
cli/: Cargo.toml  sqlx-data.json
cli/src/: app.rs  config.rs  db.rs  health.rs  lib.rs  main.rs  price_client.rs  quotes_client.rs  tracing.rs
galoy-client/: Cargo.toml
galoy-client/src/: error.rs  lib.rs
galoy-client/tests/: galoy_client.rs
galoy-wallet/: Cargo.toml
galoy-wallet/tests/: galoy_client.rs  galoy_wallet.rs
hedging/: .env  .gitignore  Cargo.toml  sqlx-data.json
hedging/.sqlx/: query-0eb7034d6a8048df9d45a2950feb3031fbc4024b17547e89f3370fa9987f25a5.json  query-0fdfa3de8a33878aecf60e29e1fd6ed3eeff1bd92e3eca50d51e221350518745.json  query-26fa2863be469d0f97b42390da4c73344a7d5152e4b5704574dc2f83756a94c6.json  query-4b0b1c2376210b3e700e4faa13a3fb6ee3505989f7a74cad2b47b2441ca94933.json  query-5a7a2a9f44d59aa52bf93bae05be9078b4de460c26ad0c66520f4361601f5700.json  query-755920d9b23d1c31d6479964d3e1130409f4b74ad5c7519e838818f07ebefd47.json  query-96f7ee6322ab9ae4a1a69d230e50dcbec45afacfbbf811d90078643fa67cd772.json  query-9f0ad7bff9fc100811e93f38ee7eff83114f092eee6971a1a15586597beb61f2.json  query-a3364ac9e48a6dc9b7cf1b02d70b454ccc1e20bc1528ed1896e8411b30ae9d00.json  query-a96d3a4a4c19ae27d60f46d99e12dcc09ea2440aaae906c0e159bed1b8b71ad3.json  query-bdc01a6886522e6a9730c9b7bda89fe76907909a86ae77f91f95b3db677e0a74.json  query-d393086f855e0eb9bae8575eabf08e0882c0dbaaa7235c8ef9f94954c1f4a9a4.json  query-ec7ba61bfab2d7ce85f306efac3a90a1fc514ce949e1984fe518b46e2c4a3612.json  query-f0d88cf22a894b17539514bc1e8dfc412dcc36212cccd5f99a6715b057f0fb52.json  query-f7c8576f2bd7f5f9124bd5eb7f959064f6d3bc255aa827dc3eb86460b60d2881.json
hedging/migrations/: 20220901190602_hedging-setup.down.sql  20220901190602_hedging-setup.up.sql  20220926200102_add-okex-orders.down.sql  20220926200102_add-okex-orders.up.sql  20221013061329_add-okex-transfers.down.sql  20221013061329_add-okex-transfers.up.sql
hedging/src/: adjustment_action.rs  config.rs  error.rs  hack_user_trades_lag.rs  job.rs  lib.rs  rebalance_action.rs
hedging/tests/: hedging.rs
kollider-client/: Cargo.toml
kollider-client/src/: lib.rs
kollider-client/tests/: client.rs
kollider-price/: Cargo.toml
kollider-price/src/: convert.rs  error.rs  lib.rs
kollider-price/tests/: price_feed.rs
ledger/: Cargo.toml
ledger/src/: balances.rs  constants.rs  error.rs  lib.rs
ledger/tests/: ledger.rs
okex-client/: Cargo.toml
okex-client/src/: lib.rs
okex-client/tests/: client.rs
okex-order-book/: Cargo.toml
okex-order-book/src/: book.rs  config.rs  error.rs  lib.rs
okex-order-book/tests/: order_book.rs
okex-price/: Cargo.toml
okex-price/src/: config.rs  convert.rs  error.rs  lib.rs  main.rs  okex_shared.rs
okex-price/tests/: order_book.rs  price_feed.rs  pricefeed.rs
price-server/: Cargo.toml  build.rs
price-server/src/: cache_config.rs  error.rs  exchange_order_book_cache.rs  exchange_price_cache.rs  exchange_tick_cache.rs  lib.rs  order_book_cache.rs  order_book_snapshot_cache.rs  price_mixer.rs
price-server/tests/: price_app.rs
quotes-server/: Cargo.toml  build.rs
quotes-server/.sqlx/: query-6e87c7231f91379afe2414309051966925d022b3b41170dca18dccc1cdecf4ec.json  query-a9f2e532a8cedde9ff6c74ce159591ff133ed437f2169d48ee162189b8f4f5c8.json  query-bee867d70bdbee4144a8276ef8937f59a079a28c2cac22d02ed91b23cb2c3f8f.json  query-deea77271aa7dfc5c2ea393cd94dfdc041d6f8c3f0241ce542da01a5fab96525.json
quotes-server/src/: currency_exchange.rs  error.rs  lib.rs  price_mixer.rs
quotes-server/tests/: quote_app.rs  quotes_app.rs
shared/: Cargo.toml
shared/src/: exchange.rs  exchanges_config.rs  health.rs  lib.rs  macros.rs  money.rs  payload.rs  sqlxmq.rs  time.rs  tracing.rs
shared/tests/: pubsub.rs
user-trades/: .env  Cargo.toml  sqlx-data.json
user-trades/.sqlx/: query-21fff44c3d9afbeb410e20503d5503ed369d2e1e973d7240ea7e6db64d15af9d.json  query-2b868fd5a78978ec8bc3bcd79008f831a139e070f994b0b8bfe4e8a3dd3105f7.json  query-826a2e93ff9e145528eaafb810f5c8028a099f205369d4e59766f46c6a0d7500.json  query-c0a3dad5c21faee2e7ee480ceeba54924c70f5d53c344cfcf6ac09d759016976.json  query-cb456cade246ef96b3f03e01d373e081166e03d1ec2914606b975d33273c195c.json  query-e232bc879d083e5ed3f97f7b4a784c353d97703588b64cd44452d4f07b858cfa.json  query-ecda7feba70249cfa67e14e09d73daaac625dcbf4b307ae664f26b9f5d0eef2d.json  query-fee34cfbdb19294324dc4ceb3cc20fcf3bd61814cd8f1a680564ba14a14b2185.json
user-trades/migrations/: 20220819123516_create-initial-tables.down.sql  20220819123516_create-initial-tables.up.sql  20220819123516_user-trades-setup.down.sql  20220819123516_user-trades-setup.up.sql  20220916102905_add-galoy-txs.down.sql  20220916102905_add-galoy-txs.up.sql  20220916192745_remove-is-latest-from-user-trades.down.sql  20220916192745_remove-is-latest-from-user-trades.up.sql  20221013071013_drop-latest-cursor.down.sql  20221013071013_drop-latest-cursor.up.sql
user-trades/src/: error.rs  galoy_transactions.rs  lib.rs
user-trades/tests/: app.rs  user_trade_balances.rs
(+284 files in other folders)
