[workspace]

members = [
  "shared",
  "ledger",
  "price-server",
  "cli",
  "hedging",
  "user-trades",
  "okex-price",
  "okex-client",
  "bitfinex-client",
  "bitfinex-price",
  "galoy-client",
]

[patch.crates-io]
# Patch tempfile to 3.4.0 (to remove vulnerable remove_dir_all crate)
# v3.4.0 tag was not added to the repo - hence we pin to the rev
tempfile = { git = "https://github.com/Stebalien/tempfile", rev = "bec6c43" }
