[workspace]
resolver = "2"
members = [
  "shared",
  "ledger",
  "price-server",
  "quotes-server",
  "cli",
  "hedging",
  "user-trades",
  "okex-price",
  "okex-client",
  "bitfinex-client",
  "bitfinex-price",
  "galoy-client",
  "bria-client",
]

[workspace.dependencies]
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"]  }
url = { version = "2.3.1", features = ["serde"] }
axum = "0.6.11"
axum-core = "0.3.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.19"
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
sqlxmq = { git = "https://github.com/GaloyMoney/sqlxmq", rev = "f03f73c", default-features = false, features = ["runtime-tokio-rustls"] }
sqlx-ledger = { version = "0.10.0", features = ["otel"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.27"
async-trait = "0.1.67"
thiserror = "1.0.49"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"]}
opentelemetry-http = "0.9.0"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
ring = "0.16.20"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
data-encoding = "2.3.3"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
governor = "0.5.1"
lazy_static = "1.4.0"
rand = "0.8.5"
itertools = "0.10.5"
crc32fast = "1.3.2"
clap = { version = "4.4", features = ["derive", "env"] }
tonic = "0.9.2"
prost = "0.11"
prost-wkt-types = { version = "0.4.2", features = ["vendored-protoc"]}
graphql_client = {version = "0.12.0", features = ["reqwest"]}
rusty-money = "0.4.1"
derive_builder = "0.12.0"
