[workspace]
resolver = "2"
members = [
  "shared",
  "ledger",
  "price-server",
  "quotes-server",
  "cli",
  "hedging",
  "user-trades",
  "okex-price",
  "okex-client",
  "galoy-client",
  "bria-client",
]

[workspace.dependencies]
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"]  }
url = { version = "2.5.0", features = ["serde"] }
axum = "0.6.11"
axum-core = "0.3.4"
serial_test = { version = "*" , features = ["file_locks"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
serde_with = { version = "3.7.0", features = ["chrono_0_4"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
sqlxmq = { version = "0.5.0", default-features = false, features = ["runtime-tokio-rustls"] }
sqlx-ledger = { version = "0.11.3", features = ["otel"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.80"
thiserror = "1.0.58"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-http = "0.11.1"
chrono = { version = "0.4.37", features = ["clock", "serde"], default-features = false }
ring = "0.16.20"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
data-encoding = "2.5.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
governor = "0.5.1"
lazy_static = "1.4.0"
rand = "0.8.5"
itertools = "0.11.0"
crc32fast = "1.4.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
tonic = "0.11"
tonic-build = { version = "0.11", features = ["prost"] }
protobuf-src = { version = "1.1.0" }
prost = "0.12.3"
prost-wkt-types = { version = "0.5.0", features = ["vendored-protoc"]}
graphql_client = {version = "0.12.0", features = ["reqwest"]}
rusty-money = "0.4.1"
derive_builder = "0.20.0"
h2 = "0.4.3"
