[package]
name = "bitfinex-client"
version = "0.5.4"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
ring = "0.16.20"
data-encoding = "2.3.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
serde_yaml = "0.9.17"
rust_decimal = "1.26.1"
governor = "0.5.1"
lazy_static = "1.4.0"
rust_decimal_macros = "1.28.0"
rand = "0.8.5"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.68"
serial_test = "*"
