[package]
name = "bitfinex-price"
version = "0.9.35-dev"
edition = "2021"
authors = ["Sebastien Verreault <sv@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Publishes bitfinex price feed to redis"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
crc32fast = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
