[package]
name = "bria-client"
version = "0.11.3-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

anyhow = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
axum-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
rust_decimal_macros = { workspace = true }
rusty-money = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
prost-wkt-types = { workspace = true }

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.10.2", features = ["prost"] }

[dev-dependencies]
anyhow = "1.0.70"
rand = { workspace = true }
