[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

thiserror = "1.0.32"
tokio = "1.20.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "decimal", "uuid" ] }
uuid = "1.1.2"
tracing = "0.1.36"
serde = "1.0.143"
anyhow = "1.0.62"

[dev-dependencies]
anyhow = "1.0.62"
