[package]
name = "stablesats"
version = "0.5.3"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "The stablesats cli binary"

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
price-server = { path = "../price-server" }
user-trades = { path = "../user-trades" }
galoy-client = { path = "../galoy-client" }
okex-client = { path = "../okex-client" }
hedging = { path = "../hedging" }
okex-price = { path = "../okex-price" }
bitfinex-price = { path = "../bitfinex-price" }
kollider-price = { path = "../kollider-price" }

anyhow = "1.0.68"
clap = { version = "4.1", features = ["derive", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = "1.24.2"
futures = "0.3.25"
tonic = "0.8.3"
url = { version = "2.3.1", features = ["serde"] }
rust_decimal = "1.26.1"
opentelemetry = "0.18.0"
tracing = "0.1.37"
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.18.0"
axum = "0.6.4"
chrono = "0.4.23"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-rustls", "postgres", "decimal", "uuid", "chrono", "json" ] }
