[package]
name = "stablesats"
version = "0.9.4-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "The stablesats cli binary"

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
price-server = { path = "../price-server" }
user-trades = { path = "../user-trades" }
galoy-client = { path = "../galoy-client" }
okex-client = { path = "../okex-client" }
hedging = { path = "../hedging" }
okex-price = { path = "../okex-price" }
bitfinex-price = { path = "../bitfinex-price" }

anyhow = "1.0.70"
clap = { version = "4.1", features = ["derive", "env"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = "1.26.0"
futures = "0.3.27"
tonic = "0.9.1"
url = { version = "2.3.1", features = ["serde"] }
rust_decimal = "1.29.0"
opentelemetry = "0.18.0"
tracing = "0.1.37"
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.18.0"
axum = "0.6.11"
chrono = "0.4.24"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-rustls", "postgres", "decimal", "uuid", "chrono", "json" ] }
