[package]
name = "stablesats"
version = "0.9.22"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "The stablesats cli binary"

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
price-server = { path = "../price-server" }
user-trades = { path = "../user-trades" }
galoy-client = { path = "../galoy-client" }
okex-client = { path = "../okex-client" }
hedging = { path = "../hedging" }
okex-price = { path = "../okex-price" }
bitfinex-price = { path = "../bitfinex-price" }
bria-client = { path = "../bria-client" }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
