[package]
name = "galoy-client"
version = "0.9.4-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
futures = "0.3.27"
graphql_client = {version = "0.12.0", features = ["reqwest"]}
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.93"

thiserror = "1.0.40"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
tracing = "0.1.37"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.1"
opentelemetry = "0.18.0"
tracing-opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"

[dev-dependencies]
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["macros"] }
