[package]
name = "galoy-client"
version = "0.9.39"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
futures = { workspace = true }
graphql_client =  { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }

[dev-dependencies]
anyhow = "1.0.70"
tokio = { version = "1.34.0", features = ["macros"] }
