[package]
name = "hedging"
version = "0.9.15"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
ledger = { path = "../ledger", package = "stablesats-ledger" }
shared = { path = "../shared", package = "stablesats-shared" }
okex-client = { path = "../okex-client" }
bitfinex-client = { path = "../bitfinex-client" }
galoy-client = { path = "../galoy-client" }

rust_decimal_macros = "1.29.0"
serde = "1.0.158"
serde_json = "1.0.93"
tokio = "1.29.1"
futures = "0.3.27"
thiserror = "1.0.40"
opentelemetry = { version = "0.19.0", features = ["trace"] }
tracing-opentelemetry = "0.19.0"
tracing = "0.1.37"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono"] }
sqlxmq = { git = "https://github.com/GaloyMoney/sqlxmq", rev = "f03f73c", default-features = false, features = ["runtime-tokio-rustls"] }
rust_decimal = "1.29.0"
uuid = "1.3.0"
serde_with = { version = "2.3.1", features = ["chrono_0_4"] }

# To fix vulnerability
h2 = "0.3.17"

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "*"
