[package]
name = "hedging"
version = "0.11.1-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
ledger = { path = "../ledger", package = "stablesats-ledger" }
shared = { path = "../shared", package = "stablesats-shared" }
okex-client = { path = "../okex-client" }
bitfinex-client = { path = "../bitfinex-client" }
bria-client = { path = "../bria-client" }
galoy-client = { path = "../galoy-client" }

rand = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
sqlxmq = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
serde_with = { workspace = true }

# To fix vulnerability
h2 = "0.3.17"

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "*"
