[package]
name = "kollider-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
data-encoding = "2.3.2"
json = "0.12.4"
reqwest = { version = "0.11.12", features = ["json"] }
ring = "0.16.20"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.66"
