[package]
name = "kollider-price"
version = "0.3.17-dev"
edition = "2021"

[dependencies]
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = [
    "rustls-tls-webpki-roots",
] }
shared = { path = "../shared", package = "stablesats-shared" }
thiserror = "1.0.37"
rust_decimal = "1.26.1"
url = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4", features = [
    "clock",
    "serde",
], default-features = false }
