[package]
name = "kollider-price"
version = "0.5.2-dev"
edition = "2021"

[dependencies]
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
shared = { path = "../shared", package = "stablesats-shared" }
thiserror = "1.0.38"
rust_decimal = "1.26.1"
url = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4", features = [
    "clock",
    "serde",
], default-features = false }
