[package]
name = "kollider-price"
version = "0.6.3-dev"
edition = "2021"

[dependencies]
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
shared = { path = "../shared", package = "stablesats-shared" }
thiserror = "1.0.38"
rust_decimal = "1.28.1"
url = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4", features = [
    "clock",
    "serde",
], default-features = false }
