[package]
name = "stablesats-ledger"
version = "0.9.17"
edition = "2021"


[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

sqlx-ledger = { version = "0.9.0", features = ["otel"] }

chrono = "0.4.24"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
serde = "1.0.158"
serde_json = "1.0.93"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono"] }
thiserror = "1.0.40"
tokio = "1.29.1"
tracing = "0.1.37"
uuid = "1.3.0"

[dev-dependencies]
anyhow = "1.0.70"
