[package]
name = "okex-client"
version = "0.9.11-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
ring = "0.16.20"
data-encoding = "2.3.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.103"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
serde_yaml = "0.9.19"
rust_decimal = "1.29.0"
governor = "0.5.1"
lazy_static = "1.4.0"
rust_decimal_macros = "1.29.0"
rand = "0.8.5"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "*"
