[package]
name = "okex-client"
version = "0.9.33"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ring = { workspace = true }
data-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
rust_decimal = { workspace = true }
governor = { workspace = true }
lazy_static = { workspace = true }
rust_decimal_macros = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "*"
