[package]
name = "okex-order-book"
version = "0.1.0"
edition = "2021"
authors = ["Enigbe Ochekliye <enigbe@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Streams snapshots of OKX order book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

futures = "0.3.24"
tokio = "1.21.2"
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"]  }
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0.37"
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"

[dev-dependencies]
anyhow = "1.0.65"