[package]
name = "okex-price"
version = "0.3.21-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Publishes okex price feed to redis"

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

futures = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"]  }
url = { version = "2.3.1", features = ["serde"] }
rust_decimal = "1.26.1"
tracing = "0.1.37"
anyhow = "1.0.68"
itertools = "0.10.5"
crc32fast = "1.3.2"

[dev-dependencies]
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
