[package]
name = "okex-price"
version = "0.7.1-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Publishes okex price feed to redis"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"]  }
url = { version = "2.3.1", features = ["serde"] }
rust_decimal = "1.28.1"
tracing = "0.1.37"
anyhow = "1.0.69"
itertools = "0.10.5"
crc32fast = "1.3.2"
serde_with = "2.2.0"
chrono = "0.4"

[dev-dependencies]
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
