[package]
name = "price-server"
version = "0.9.10-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Server that exposes prices for hedging"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

chrono = { version = "0.4", features = [
    "clock",
    "serde",
], default-features = false }
prost = "0.11"
tonic = "0.9"
axum-core = "0.3.4"
tokio = "1.28.2"
futures = "0.3.27"
thiserror = "1.0.40"
serde = { version = "1.0.158", features = ["derive"] }
rust_decimal = "1.29.0"
tracing = "0.1.37"
opentelemetry = { version = "0.18.0", features = ["trace"] }
tracing-opentelemetry = "0.18.0"
rust_decimal_macros = "1.29.0"
rusty-money = "0.4.1"
serde_with = { version = "2.3.1", features = ["chrono_0_4"] }
async-trait = "0.1.67"

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.8", features = ["prost"] }

[dev-dependencies]
anyhow = "1.0.70"
serde = "1.0.158"
serde_json = "1.0.93"
