[package]
name = "price-server"
version = "0.12.6"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Server that exposes prices for hedging"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }

chrono = { workspace = true } 
prost = { workspace = true }
tonic = { workspace = true }
axum-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
rust_decimal_macros = { workspace = true }
rusty-money = { workspace = true }
serde_with = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true}

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
