[package]
name = "quotes-server"
version = "0.12.1-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
ledger = { path = "../ledger", package = "stablesats-ledger" }

sqlx = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
opentelemetry = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.10", features = ["prost"] }

[dev-dependencies]
anyhow = "1.0.70"
serde = "1.0.194"
serde_json = "1.0.93"
serial_test = { version = "*" , features = [ "file_locks"] }
